--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,13 @@
       type="font/woff2"
       crossorigin="anonymous"
     />
+    <link
+      rel="preload"
+      href="Muyao-Softbrush.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
 
     <link
       rel="manifest"
