--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,14 @@
 
     <link
       rel="preload"
+      href="Muyao-Softbrush.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+
+    <link
+      rel="preload"
       href="Virgil.woff2"
       as="font"
       type="font/woff2"
